--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Harsh Deep Singh",
   "license": "ISC",
   "dependencies": {
+    "cookie-session": "^2.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "nodemon": "^2.0.15"
